fix(#23): allow code fields to overflow/scroll (#25)
Additionally this adds a shadow to the side of pre-blocks that have scrollable content.

--- a/_source/assets/css/typography.css
+++ b/_source/assets/css/typography.css
@@ -42,6 +42,35 @@ kbd {
     line-height: 1.25;
     background: rgba(244, 190, 206, 0.204);
     background: hsl(from var(--background) h s calc(l + 10));
+    word-break: break-word;
+}
+
+pre {
+    --pre-background: hsl(from var(--background) h s calc(l + 10));
+    display: block;
+    max-width: 100%;
+    overflow-x: auto;
+    background:
+        /* Shadow covers */
+        linear-gradient(to right, var(--pre-background) 25%, rgba(245, 245, 245, 0)),
+        linear-gradient(to left, var(--pre-background) 25%, rgba(245, 245, 245, 0)) 100% 0,
+
+        /* Shadows */
+        linear-gradient(to right, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)),
+        linear-gradient(to left, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)) 100% 0;
+    background-size:
+        4em 100%,
+        4em 100%,
+        1em 100%,
+        1em 100%;
+    background-attachment:
+        local,
+        local,
+        scroll,
+        scroll;
+    background-repeat: no-repeat;
+    background-color: rgba(244, 190, 206, 0.204);
+    background-color: var(--pre-background);
 }
 
 pre > code {
